feat: add framer-motion for animations; implement QuoteCard and OtherRecipesFeed components; update CategoriesSection with navigation buttons

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "drizzle-zod": "^0.7.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
