--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.15.1",
     "react-resizable-panels": "^2.1.7",
     "react-timer-hook": "^3.0.8",
     "recharts": "^2.15.1",
