--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^4.1.0",
@@ -42,6 +43,7 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/postcss": "^4.0.7",
     "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.7.9",
     "better-auth": "^1.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,6 +64,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.6",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
     "react-resizable-panels": "^2.1.7",
