--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.0",
     "pg": "^8.13.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
