--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/postcss": "^4.0.7",
     "@tanstack/react-query": "^5.66.9",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.7.9",
-    "better-auth": "^1.1.18",
+    "better-auth": "^1.1.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -55,10 +56,12 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
+    "i": "^0.3.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.0",
     "nuqs": "^2.4.0",
     "pg": "^8.13.3",
     "postcss": "^8.5.3",
@@ -75,6 +78,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.7",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
