--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "i": "^0.3.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.2.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "nuqs": "^2.4.0",
