--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-s3": "^3.758.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@hookform/resolvers": "^4.1.0",
+    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -42,25 +42,25 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@sindresorhus/slugify": "^2.2.1",
-    "@tailwindcss/postcss": "^4.0.7",
-    "@tanstack/react-query": "^5.66.9",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tanstack/react-query": "^5.67.1",
     "@types/nodemailer": "^6.4.17",
-    "axios": "^1.7.9",
-    "better-auth": "^1.1.21",
+    "axios": "^1.8.1",
+    "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.4.7",
     "i": "^0.3.7",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.475.0",
-    "next": "^15.2.0",
+    "lucide-react": "^0.477.0",
+    "motion": "^12.4.10",
+    "next": "^15.2.1",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "nuqs": "^2.4.0",
@@ -69,15 +69,15 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.6",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
     "react-resizable-panels": "^2.1.7",
     "react-timer-hook": "^3.0.8",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.7",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
