--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pg": "^8.13.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-aria-components": "^1.7.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
