feat: add MDX support and implement footer component; enhance layout with typography and metadata handling

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^4.1.3",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.2.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -44,6 +47,7 @@
     "@sindresorhus/slugify": "^2.2.1",
     "@tailwindcss/postcss": "^4.0.9",
     "@tanstack/react-query": "^5.67.1",
+    "@types/mdx": "^2.0.13",
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.8.1",
     "better-auth": "^1.2.3",
@@ -88,6 +92,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
