--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@hono/zod-validator": "^0.4.3",
     "@hookform/resolvers": "^4.1.3",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
@@ -54,12 +55,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "compressorjs": "^1.2.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "hono": "^4.7.4",
     "i": "^0.3.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
@@ -70,6 +73,7 @@
     "nuqs": "^2.4.1",
     "pg": "^8.13.3",
     "postcss": "^8.5.3",
+    "rate-limiter-flexible": "^6.0.0",
     "react": "^19.0.0",
     "react-aria-components": "^1.7.0",
     "react-day-picker": "8.10.1",
