--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-portal": "^1.1.4",
+    "@raddix-ui/react-portal": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
