feat: update recipe collection handling; rename collectionSlug to collectionId and integrate schema-dts for structured data

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
-    "@raddix-ui/react-portal": "^1.1.4",
+    "@radix-ui/react-portal": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -84,6 +84,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-timer-hook": "^3.0.8",
     "recharts": "^2.15.1",
+    "schema-dts": "^1.1.5",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
